# OpenCV.CMake

./: .gitignore  CMakeLists.txt
OpenCV.CMake/: CMakeLists.txt  OpenCV.CMake.cpp
cmake/: build_external_project.cmake
